# gateway-security-rs

./: Cargo.toml  Cross.toml  Makefile.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs  result.rs  txn_sign.rs
src/cmd/: add.rs  info.rs  mod.rs  verify.rs
src/device/: ecc.rs  file.rs  mod.rs  nova_tz.rs  tpm.rs
