[package]
name = "gateway-security-rs"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "gateway-onboarding-tx"
path = "src/main.rs"

[dependencies]
helium-crypto = "0.7"
clap = {version = "4", default-features=false, features = ["derive", "help", "std", "error-context"]}
helium-proto = { git = "https://github.com/helium/proto", branch="master"}
base64 = ">=0.21"
anyhow = "1"
thiserror = "1"
http = "0"
prost = "*"
rand = "0.8"
serde = {version = "1", features = ["derive"]}
serde_json = "1"

[features]
nova-tz = [ "helium-crypto/nova-tz" ]

[package.metadata.cross.build]
pre-build = ["apt-get install -y protobuf-compiler"]
